--- a/banks/statements_pandas.ipynb
+++ b/banks/statements_pandas.ipynb
@@ -600,12 +600,13 @@
    "source": [
     "conn = sqlite3.connect(db_path)\n",
     "minimun_date = pd.read_sql_query(\"SELECT min(date) FROM sbi_bank\", conn)\n",
-    "\n",
+    "# start date\n",
+    "min_date = minimun_date['min(date)'][0]\n",
     "# end date\n",
     "end_date = pd.Timestamp('2030-12-31')\n",
     "\n",
     "# Generate a date range DataFrame\n",
-    "dates = pd.date_range(start=min_date , end=end_date , freq=\"D\")\n",
+    "dates = pd.date_range(start=minimun_date , end=end_date , freq=\"D\")\n",
     "\n",
     "# Extract date attributes\n",
     "\n",
